@@ -5,6 +5,8 @@
 	* nco_dmn_trv_msa_tbl() Update all GTT dimensions with hyperslabed size 
     
 	* nco_dmn_msa_tbl() Update GTT dimension with hyperslabed size 
+  
+	* nco_prn_var_dfn() Print variable metadata; modified to use hyperslabed sizes
 
 2013-07-19  Charlie Zender  <zender@uci.edu>
 
